k8s/uat/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: waondo-backend
  namespace: uat
  labels:
    app: waondo-node-backend
    name: waondo-node-backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: waondo-node-backend
    name: waondo-node-backend
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: mysql-db
#  namespace: uat
#  labels:
#    app: mysql-db
#    name: mysql-db
#spec:
#  type: ClusterIP
#  ports:
#    - port: 3306
#      name: http
#      targetPort: 3306
#  selector:
#    app: mysql-db
#    name: mysql-db
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: pma
#  namespace: uat
#  labels:
#    app: pma
#    name: pma
#spec:
#  type: ClusterIP
#  ports:
#    - port: 80
#      name: http
#      targetPort: 80
#  selector:
#    app: pma
#    name: pma
